# drone_referee_2017_18

./: CMakeLists.txt  CameraCalibration_Data_640x480.xml  README.md
BallDetection/: CMakeCache.txt  CMakeLists.txt  CameraCalibration_Data.xml  Makefile  README.txt  cmake_install.cmake  project_012_Aruco_UDP.tar
Global_par/: constants.h  get_global_par.m  getfieldnamelist.m  getgoalnamelist.m  global_par.h  global_par_ASML_field.h  global_par_Braganca_2016.h  global_par_Brazil_2014.h  global_par_Cardiff_DEMO.h  global_par_Coimbra_2017.h  global_par_Demofield.h  global_par_Eindhoven2013.h  global_par_Eindhoven_2016.h  global_par_Hefei_2015.h  global_par_Hefei_2015_TC.h  global_par_Leipzig_2016.h  global_par_Magdeburg2011.h  global_par_Mexico2012a.h  global_par_Mexico2012b.h  global_par_Nagoya_2017.h  global_par_Portugal_2013.h  global_par_Portugal_2014.h  global_par_Portugal_2014_night.h  global_par_Singapore_FieldB.h  global_par_TUE_field.h  global_par_TechChallenge_2014.h  global_par_Turkey2011.h  global_par_VilaReal_2015.h  global_par_dutch_open_2012.h  goal_par_ASML_goal.h  goal_par_Braganca_2016.h  goal_par_Coimbra_2017.h  goal_par_Eindhoven_2016.h  goal_par_Hefei_2015_Goal.h  goal_par_Inflatable_Goal.h  goal_par_Leipzig_2016.h  goal_par_Nagoya_2017.h  goal_par_Portugal_2013.h  goal_par_RDO_goal.h  goal_par_VilaReal_Goal.h  (+8 more)
Marvelmind/: -ld  Makefile  Ultrasound_data_beacon17.txt  Ultrasound_data_beacon18.txt  example.c  marvelmind.c  marvelmind.h  marvelmind_c.depend  marvelmind_c.layout  marvelmind_example
multicast/: Makefile  build_multicast  comm_stats.txt
(+76 files in other folders)
